📌 fix(layout): keep footer stuck to the bottom of all pages

--- a/frontend/levelUpZoneFrontEnd/src/app/collection/collection.component.scss
+++ b/frontend/levelUpZoneFrontEnd/src/app/collection/collection.component.scss
@@ -1,3 +1,6 @@
+main {
+  height: 100vh;
+}
 
 .collection-container {
   padding: 0 5rem;
